# WirelessAnomaly

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-data  Makefile  README.md  SECURITY.md  dev.ipynb  pyproject.toml
data/: README.md
docker/: Dockerfile  docker-compose.yml
docs/: mkdocs.yml
docs/docs/: api.md  citation.md  data.md  getting-started.md  index.md  interpretability.md  license.md  pipeline.md  reproduce.md  roadmap.md
scripts/: download_data.py  reproduce_figures.sh  reproduce_tables.sh
src/wireless_anom/: __init__.py  pipeline.py
src/wireless_anom.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/wireless_anom/classify/: models.py
src/wireless_anom/cli/: main.py
src/wireless_anom/config/: defaults.yaml
src/wireless_anom/detect/: isolation_forest.py  metrics.py
src/wireless_anom/features/: selection.py
src/wireless_anom/io/: loaders.py
src/wireless_anom/reduce/: base.py  kpca.py  pca_linear.py  umap_stub.py
src/wireless_anom/utils/: logging.py  paths.py  seeds.py  timing.py
src/wireless_anom/viz/: confusion.py  contrib.py  decision.py  distributions.py  scatter.py
tests/: conftest.py  test_cli.py  test_kpca_sampling.py  test_loaders.py  test_pipeline_smoke.py
v4_data/: 25_Results  Good_Results  v4_RMALOS.csv  v4_RMANLOS.csv  v4_UMALOS.csv  v4_UMANLOS.csv
